Fix period areas covering up marker mouse events.

--- a/frontend/history-graph/src/app/view/event-view/event-view.css
+++ b/frontend/history-graph/src/app/view/event-view/event-view.css
@@ -1,3 +1,7 @@
+.event-period {
+	pointer-events: none;
+}
+
 .event-marker {
 	cursor: pointer;
 	transition: opacity 0.2s ease;
